generaye HTML card's structure for engineer and intern

--- a/lib/index.html
+++ b/lib/index.html
@@ -23,8 +23,28 @@
                 </ul>
             </div>        
         </div>
-        <div id="engineer" class="engineers card"></div>
-        <div id="intern" class="interns card"></div>
+        <div id="engineer" class="engineers card">
+            <h5 class="card-title">Engineer's Name</h5>
+            <h5 class="'card-title">Engineer's Position</h5>
+            <div class="card-body">
+                <ul class="list-group">
+                    <li class="list-group-item"> Engineer's ID</li>
+                    <li class="list-group-item"> Engineer's Email</li>
+                    <li class="list-group-item"> Engineer's Github</li>
+                </ul>
+            </div>
+        </div>
+        <div id="intern" class="interns card">
+            <h5 class="card-title"> Intern's Name </h5>
+            <h5 class="'card-title"> Intern's Position </h5>
+            <div class="card-body">
+                <ul class="list-group">
+                    <li class="list-group-item"> Intern's ID</li>
+                    <li class="list-group-item"> Intern's Email</li>
+                    <li class="list-group-item"> Intern's School</li>
+                </ul>
+            </div>
+        </div>
     </section>
 </body>
 </html>
