--- a/lib/index.html
+++ b/lib/index.html
@@ -8,8 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    <section id="header"  class ='center red-400'>
-        <h1> my Team </h1>
+    <section id="header"  class ='container-fluid'>
+        <div class="row">
+            <h1 class="text-center"> My Team </h1>
+        </div>
     </section>
     <section id="generateTeam" class="team">
         <div id="manager" class="manager card">
